<resources>
    <string name="app_name">homa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="en_tete_name_revenu">Revenus</string>
    <string name="add">+</string>
    <string name="ajouter_un_revenu">Ajouter un revenu</string>
    <string name="libelle">Libelle :</string>
    <string name="montant">Montant :</string>
    <string name="valider">Valider</string>
    <string name="retour">retour</string>
    <string name="modifier_un_revenu">Modifier un revenu</string>
    <string name="supprimer">supprimer</string>
    <string name="ajouter_une_d_pense_fixe">Ajouter une dépense fixe</string>
    <string name="type_de_d_pense">Type de dépense :</string>
    <string name="modifier_une_d_pense_fixe">Modifier une dépense fixe</string>
    <string name="modifier_d_pense_annexe">Modifier dépense annexe</string>
    <string name="ajouter_un_solde">Ajouter un solde</string>
    <string name="bilan">Bilan</string>
    <string name="solde_compte_s_bancaire_s">Solde comptes</string>
    <string name="date_de_reception">Date de reception:</string>
    <string name="recu_le">Reçu le:</string>
    <string name="pr_l_vement">Prélévement:</string>
    <string name="ajouter">Ajouter</string>
    <string name="moins">-</string>
    <string name="choisir_une_date">Date de prélévement</string>
    <string name="date_de_prelevement">Date de prélévement:</string>
    <string name="paye">Payé:</string>
    <string name="fin">Fin:</string>
    <string name="fin_prelevement">Fin du prélévement:</string>
    <string name="btnn_fin_prel">fin du prélévement</string>
    <string name="recup_revenus">Voulez-vous récupérer vos revenus du mois dernier ?</string>
    <string name="recup_DF">Voulez-vous récupérer vos dépenses du mois dernier ?</string>
</resources>