<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ihm.activity.AjouterSoldeActivity">

    <fragment
        android:id="@+id/fragment_en_tete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.homa.ihm.fragment.EnTeteFragment"/>

    <TextView
        android:id="@+id/tv_ajouter_un_solde"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/fragment_en_tete"
        android:layout_marginTop="20dp"
        android:background="#28B463"
        android:gravity="center"
        android:text="@string/ajouter_un_solde"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_label_libelle_solde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libelle"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_ajouter_un_solde"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_libelle_solde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_libelle_solde"
        android:maxLength="30"/>

    <TextView
        android:id="@+id/tv_label_montant_solde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montant"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/et_libelle_solde"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_montant_solde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_montant_solde"
        android:inputType="numberSigned|numberDecimal"/>

    <GridLayout
        android:id="@+id/ll_btn_ajouter_revenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/et_montant_solde">

        <Button
            android:id="@+id/btn_valider_ajout_solde"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:backgroundTint="#CB4335"
            android:text="@string/valider"
            android:onClick="validerAjoutSolde"
            />

        <Button
            android:id="@+id/btn_retour_solde"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:backgroundTint="#273746"
            android:text="@string/retour"
            android:onClick="clickRetourAjouterSolde"/>
    </GridLayout>
</RelativeLayout>