<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ihm.activity.AjouterDepenseFixeActivity">

    <fragment
        android:id="@+id/fragment_en_tete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.homa.ihm.fragment.EnTeteFragment"/>

    <TextView
        android:id="@+id/tv_ajouter_une_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/fragment_en_tete"
        android:layout_marginTop="20dp"
        android:background="#2E86C1"
        android:gravity="center"
        android:text="@string/ajouter_une_d_pense_fixe"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_label_select_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/type_de_d_pense"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_ajouter_une_depense_fixe"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/spinner_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/tv_label_select_depense_fixe"/>

    <TextView
        android:id="@+id/tv_label_libelle_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/libelle"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/spinner_depense_fixe"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_libelle_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@id/tv_label_libelle_depense_fixe"
        android:maxLength="30"/>

    <TextView
        android:id="@+id/tv_label_montant_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/montant"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/et_libelle_depense_fixe"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_montant_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_montant_depense_fixe"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tv_label_payer_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/paye"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@+id/et_montant_depense_fixe"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:id="@+id/cb_payer_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/et_montant_depense_fixe"/>

    <Button
        android:id="@+id/btn_choisir_date_depense_fixe"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:backgroundTint="#273746"
        android:text="@string/choisir_une_date"
        android:textSize="10sp"
        android:layout_below="@+id/cb_payer_depense_fixe"
        android:onClick="clickCalendarAjoutDepenseFixe"
        />

    <TextView
        android:id="@+id/tv_date_prelevement_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/btn_choisir_date_depense_fixe"
        />

    <GridLayout
        android:id="@+id/ll_btn_ajouter_revenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_date_prelevement_depense_fixe">

        <Button
            android:id="@+id/btn_valider_ajout_depense_fixe"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:backgroundTint="#CB4335"
            android:text="@string/valider"
            android:onClick="ajouterDepenseFixe"
            />

        <Button
            android:id="@+id/btn_retour_depense_fixe"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:backgroundTint="#273746"
            android:text="@string/retour"
            android:onClick="clickRetourAjouterDepenseFixe"/>
    </GridLayout>

</RelativeLayout>