<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ihm.activity.ModifierDepenseFixeActivity">

    <fragment
        android:id="@+id/fragment_en_tete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.homa.ihm.fragment.EnTeteFragment"/>

    <TextView
        android:id="@+id/tv_modifier_une_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/fragment_en_tete"
        android:layout_marginTop="20dp"
        android:background="#2E86C1"
        android:gravity="center"
        android:text="@string/modifier_une_d_pense_fixe"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_label_select__modif_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/type_de_d_pense"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_modifier_une_depense_fixe"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/spinner_modif_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/tv_label_select__modif_depense_fixe"/>

    <TextView
        android:id="@+id/tv_label_libelle_modif_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/libelle"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/spinner_modif_depense_fixe"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_libelle_modif_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@id/tv_label_libelle_modif_depense_fixe"
        android:maxLength="30"/>

    <TextView
        android:id="@+id/tv_label_montant_modif_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/montant"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/et_libelle_modif_depense_fixe"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_montant_modif_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_montant_modif_depense_fixe"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tv_label_payer__modif_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/paye"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@+id/et_montant_modif_depense_fixe"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:id="@+id/cb_payer_modif_depense_fixe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/et_montant_modif_depense_fixe"/>

    <Button
        android:id="@+id/btn_modif_choisir_date_depense_fixe"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:backgroundTint="#273746"
        android:text="@string/choisir_une_date"
        android:textSize="10sp"
        android:layout_below="@+id/cb_payer_modif_depense_fixe"
        android:onClick="clickCalendarModifDepenseFixe"
        />

    <TextView
        android:id="@+id/tv_modif_date_prelevement_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#273746"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/btn_modif_choisir_date_depense_fixe"
        />

    <GridLayout
        android:id="@+id/grid_modif_depense_fixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_modif_date_prelevement_depense_fixe">

        <Button
            android:id="@+id/btn_valider_modif_depense_fixe"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:backgroundTint="#27AE60"
            android:gravity="center"
            android:text="@string/valider"
            android:onClick="clickValiderModifDepenseFixe"/>

        <Button
            android:id="@+id/btn_supprimer_depense_fixe"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginTop="20dp"
            android:backgroundTint="#CB4335"
            android:text="@string/supprimer"
            android:onClick="clickSupprimerDepenseFixe"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grid_modif_depense_fixe">

        <Button
            android:id="@+id/btn_retour_modif_depense_fixe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="#273746"
            android:onClick="clickRetourModifDepenseFixe"
            android:text="@string/retour" />
    </LinearLayout>

</RelativeLayout>