<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#E74C3C"
    tools:context=".ihm.fragment.EnTeteRevenuFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:gravity="left|center"
        android:text="@string/en_tete_name_revenu"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_gravity="right|center"
        android:layout_marginRight="80dp"
        android:backgroundTint="#CB4335"
        android:text="@string/ajouter"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="clickAjouterRevenu"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btn_visibility_revenu"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_gravity="right|center"
        android:backgroundTint="#CB4335"
        android:text="@string/moins"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:onClick="clickVisibilityListViewRevenu"/>

</FrameLayout>